# DevChron

./: .SRCINFO  Cargo.toml  PKGBUILD  README.md
.github/prompts/: plan-devChron.prompt.md
assets/: waybar-devchron.sh
config/: default.toml
src/: app.rs  error.rs  main.rs
src/config/: mod.rs  settings.rs
src/events/: keyboard.rs  mod.rs
src/hyprland/: mod.rs  status.rs
src/notification/: manager.rs  mod.rs
src/timer/: mod.rs  pomodoro.rs  session.rs  state.rs
src/ui/: mod.rs  render.rs  theme.rs
