[package]
name = "devchron"
version = "0.1.0"
edition = "2021"
authors = ["Ben Hood <bhood239@gmail.com>"]
description = "A stunning TUI Pomodoro timer for Hyprland/Wayland"
license = "MIT"
repository = "https://github.com/bhood239/DevChron"
keywords = ["pomodoro", "timer", "tui", "productivity"]
categories = ["command-line-utilities"]

[dependencies]
ratatui = "0.26"
crossterm = "0.27"
tokio = { version = "1", features = ["full"] }
notify-rust = "4"
serde = { version = "1", features = ["derive"] }
toml = "0.8"
clap = { version = "4", features = ["derive"] }
directories = "5"
dirs = "5"
anyhow = "1"
chrono = "0.4"
serde_json = "1"

[features]
default = []
sound = ["rodio"]

[dependencies.rodio]
version = "0.17"
optional = true
